--- a/manifests/blog/blog-svc.yaml
+++ b/manifests/blog/blog-svc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: blog
 spec:
   type: ClusterIP
   selector:
-    app: nginx
+    app: blog
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 1313
 
