--- a/manifests/nginx-svc.yaml
+++ b/manifests/nginx-svc.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     app: nginx
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-
+  - name: http
+    protocol: tcp
+    port: 80
+    targetPort: http
