--- a/manifests/blog/blog-svc.yaml
+++ b/manifests/blog/blog-svc.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     app: blog
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
-      targetPort: 1313
-
+      targetPort: http
