--- a/manifests/blog/blog-ing.yaml
+++ b/manifests/blog/blog-ing.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: blog
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: blog.mt165.co.uk
