--- a/manifests/homepage/homepage-svc.yaml
+++ b/manifests/homepage/homepage-svc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: homepage
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
-    app: nginx
+    app: homepage
   ports:
   - name: http
     protocol: TCP
