--- a/manifests/blog/blog-dep.yaml
+++ b/manifests/blog/blog-dep.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: blog
         image: docker.io/mtinside/mt165-blog:20180224
+        imagePullPolicy: Always
         ports:
         - name: http
           protocol: TCP
