Resources and probes for blog

--- a/manifests/blog/blog-dep.yaml
+++ b/manifests/blog/blog-dep.yaml
@@ -22,3 +22,18 @@ spec:
         - name: http
           protocol: TCP
           containerPort: 80
+        livenessProbe:
+          httpGet:
+            port: http
+            path: /
+        readinessProbe:
+          httpGet:
+            port: http
+            path: /
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "100m"
+          limits:
+            memory: "500Mi"
+            cpu: "500m"
