Fix labels on homepage

--- a/manifests/homepage/homepage-dep.yaml
+++ b/manifests/homepage/homepage-dep.yaml
@@ -5,14 +5,14 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: homepage
   replicas: 1
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: nginx
+        app: homepage
     spec:
       containers:
       - name: nginx
