--- a/manifests/homepage/homepage-ing.yaml
+++ b/manifests/homepage/homepage-ing.yaml
@@ -4,6 +4,7 @@ metadata:
   name: homepage
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/tls-acme: "true"
 spec:
   rules:
   - host: mt165.co.uk
@@ -18,3 +19,8 @@ spec:
       - backend:
           serviceName: homepage
           servicePort: http
+tls:
+  - hosts:
+    - mt165.co.uk
+    - www.mt165.co.uk
+    secretName: homepage-tls
