--- a/manifests/cert-manager/cert-manager-helm.yaml
+++ b/manifests/cert-manager/cert-manager-helm.yaml
@@ -14,4 +14,4 @@ spec:
   releaseName: cert-manager
   values:
     - name: ingressShim.extraArgs
-      value: {--default-issuer-kind=ClusterIssuer,--default-issuer-name=letsencrypt-prod}
+      value: '{--default-issuer-kind=ClusterIssuer,--default-issuer-name=letsencrypt-prod}'
