--- a/manifests/blog/blog-dep.yaml
+++ b/manifests/blog/blog-dep.yaml
@@ -9,6 +9,9 @@ spec:
   replicas: 2
   strategy:
     type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
