--- a/manifests/blog/blog-dep.yaml
+++ b/manifests/blog/blog-dep.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: blog
-        image: docker.io/mtinside/mt165-blog:20180329
+        image: docker.io/mtinside/mt165-blog:20180329_141134
         imagePullPolicy: Always
         ports:
         - name: http
