--- a/terraform/modules/bootstrap/manifests/flux/flux-deployment.yaml
+++ b/terraform/modules/bootstrap/manifests/flux/flux-deployment.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: flux
@@ -12,13 +12,20 @@ spec:
       labels:
         name: flux
     spec:
-      # The serviceAccount is only needed for Kubernetes with RBAC.
-      # You will also need to create the resources in flux-account.yaml.
       serviceAccount: flux
       volumes:
       - name: git-key
         secret:
           secretName: flux-git-deploy
+          defaultMode: 0400 # when mounted read-only, we won't be able to chmod
+        
+      # This is a tmpfs used for generating SSH keys. In K8s >= 1.10,
+      # mounted secrets are read-only, so we need a separate volume we
+      # can write to.
+      - name: git-keygen
+        emptyDir:
+          medium: Memory
+
       containers:
       - name: flux
         # There are no ":latest" images for flux. Find the most recent
@@ -30,7 +37,10 @@ spec:
         - containerPort: 3030 # informational
         volumeMounts:
         - name: git-key
-          mountPath: /etc/fluxd/ssh
+          mountPath: /etc/fluxd/ssh # to match image's ~/.ssh/config
+          readOnly: true # this will be the case perforce in K8s >=1.10
+        - name: git-keygen
+          mountPath: /var/fluxd/keygen # to match image's ~/.ssh/config
         args:
 
         # if you deployed memcached in a different namespace to flux,
@@ -39,10 +49,15 @@ spec:
         # - --memcached-hostname=memcached.default.svc.cluster.local
         # - --memcached-service=memcached
 
+        # this must be supplied, and be in the tmpfs (emptyDir)
+        # mounted above, for K8s >= 1.10
+        - --ssh-keygen-dir=/var/fluxd/keygen
+
         # replace (at least) the following URL
         - --git-url=git@github.com:mt-inside/petstack-frogstar-k8s
         - --git-branch=master
         - --git-path=manifests
+
         # include these next two to connect to an "upstream" service
         # (e.g., Weave Cloud). The token is particular to the service.
         # - --connect=wss://cloud.weave.works/api/flux
