--- a/manifests/blog/blog-ing.yaml
+++ b/manifests/blog/blog-ing.yaml
@@ -4,7 +4,7 @@ metadata:
   name: blog
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
 spec:
   rules:
   - host: blog.mt165.co.uk
