--- a/manifests/homepage/homepage-ing.yaml
+++ b/manifests/homepage/homepage-ing.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homepage
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
 spec:
   rules:
   - host: mt165.co.uk
