--- a/manifests/blog/blog-ing.yaml
+++ b/manifests/blog/blog-ing.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: blog
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
+    kubernetes.io/ingress.class: nginx
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
   - host: blog.mt165.co.uk
