--- a/manifests/homepage/homepage-ing.yaml
+++ b/manifests/homepage/homepage-ing.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: homepage
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
+    kubernetes.io/ingress.class: nginx
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
   - host: mt165.co.uk
